--- a/web-fundamental/html-css-mod4/blogs.css
+++ b/web-fundamental/html-css-mod4/blogs.css
@@ -10,7 +10,7 @@ nav li:hover {
     background-color: rgb(244, 244, 72);
 }
 header {
-    background-color: #f8f9fa;
+    background-color: #b5d5f5;
     padding: 20px;
     text-align: center;
 }
